update events page hopefully fix alignment problem

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2534,7 +2534,7 @@ body {
 .cid-r5I5OUcoaw {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #2e2e2e;
+  background-color: #073b4c;
 }
 .cid-r5I5OUcoaw .line {
   background-color: #ffffff;
